@@ -22,7 +22,7 @@
 #    Alasdair Allan (aa@astro.ex.ac.uk)
 
 #  Revision:
-#     $Id: user_agent.pl,v 1.10 2005/02/15 17:13:59 aa Exp $
+#     $Id: user_agent.pl,v 1.11 2005/02/15 20:41:23 aa Exp $
 
 #  Copyright:
 #     Copyright (C) 2003 University of Exeter. All Rights Reserved.
@@ -65,7 +65,7 @@ itself.
 
 =head1 REVISION
 
-$Id: user_agent.pl,v 1.10 2005/02/15 17:13:59 aa Exp $
+$Id: user_agent.pl,v 1.11 2005/02/15 20:41:23 aa Exp $
 
 =head1 AUTHORS
 
@@ -82,7 +82,7 @@ Copyright (C) 2003 University of Exeter. All Rights Reserved.
 #  Version number - do this before anything else so that we dont have to 
 #  wait for all the modules to load - very quick
 BEGIN {
-  $VERSION = sprintf "%d.%d", q$Revision: 1.10 $ =~ /(\d+)\.(\d+)/;
+  $VERSION = sprintf "%d.%d", q$Revision: 1.11 $ =~ /(\d+)\.(\d+)/;
  
   #  Check for version number request - do this before real options handling
   foreach (@ARGV) {
@@ -373,7 +373,7 @@ if ( $config->get_state("ua.unique_process") == 1 ) {
    $config->set_option("mailhost.name", 'butch' );
    $config->set_option("mailhost.domain", 'astro.ex.ac.uk' );
    $config->set_option("mailhost.timeout", 30 );
-   $config->set_option("mailhost.debug", 1 );   
+   $config->set_option("mailhost.debug", 0 );   
         
    # C O M M I T T   O P T I O N S  T O   F I L E S
    # ----------------------------------------------
@@ -590,6 +590,9 @@ sub kill_agent {
 # T I M E   A T   T H E   B A R  -------------------------------------------
 
 # $Log: user_agent.pl,v $
+# Revision 1.11  2005/02/15 20:41:23  aa
+# Fixed race conditions
+#
 # Revision 1.10  2005/02/15 17:13:59  aa
 # Bug fixed to handlers to fix notification problems
 #
