@@ -8,12 +8,12 @@ use vars qw(@ISA);
 
 # Based on SOAP::Transport::HTTP::Daemon::ThreadOnAccept, which in
 # turn is a threaded implemetation of SOAP::Transport::HTTP::Daemon
-use SOAP::Transport::HTTP::Daemon::ForkAfterProcessing;
+use SOAP::Transport::HTTP::Daemon::ThreadOnAccept;
 
 # Code based on WishList::Daemon.pm taken from "Programming Web
 # Services with Perl" by Ray & Kulchenko.
 
-@ISA = qw(SOAP::Transport::HTTP::Daemon::ForkAfterProcessing);
+@ISA = qw(SOAP::Transport::HTTP::Daemon::ThreadOnAccept);
 
 # request() is the only method that needs overloading in order for
 # this Daemon class to handle the authentication. All cookie headers
